cmake_minimum_required(VERSION 3.10)
project(un4seenbass-example CXX)
add_executable(main main.cpp)
if (CMAKE_SYSTEM_PROCESSOR MATCHES "(x86)|(X86)")
    set(IS_X86_ARCHITECTURE TRUE)
    target_link_libraries(main ${CMAKE_SOURCE_DIR}/libbass_x86.so)
else ()
    set(IS_X86_ARCHITECTURE FALSE)
    target_link_libraries(main ${CMAKE_SOURCE_DIR}/libbass.so)
endif ()
include_directories("${CMAKE_SOURCE_DIR}")
